Added settings for hubot-execbed.

--- a/hubot/Dockerfile
+++ b/hubot/Dockerfile
@@ -5,21 +5,33 @@ MAINTAINER kazuhito_m
 # インストール
 RUN apt-get update
 RUN apt-get upgrade -y
-RUN apt-get install -y nodejs npm
+# 基本的なソフトは予め入れる
+RUN apt-get install language-pack-ja openssh-server git
 
-# ssh サーバインストール & 設定
-RUN apt-get install -y openssh-server
+# Timezone/locale 設定
+RUN update-locale LANG=ja_JP.UTF-8
+RUN echo "LC_ALL=ja_JP.UTF-8" >> /etc/default/locale
+RUN mv /etc/localtime{,.org}
+RUN ln -s /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
+
+# ssh サーバ 設定
 RUN echo 'root:root' | chpasswd
 RUN sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 
-# redis インストール
-RUN apt-get install -y redis-server git
+# 一般ユーザ追加。
+RUN adduser hubot
+RUN echo 'hubot:hubot' | chpasswd
+
+# # redis インストール
+RUN apt-get install -y redis-server
 
 # nodejsの設定
-RUN ln -s /usr/bin/nodejs /usr/bin/node
+RUN apt-get install -y software-properties-common
+RUN add-apt-repository -y ppa:chris-lea/node.js ; apt-get update
+RUN apt-get install -y nodejs redis-server
 
 # hubot インストール
-RUN npm install -g coffee-script hubot
+RUN npm install -g coffee-script hubot yo generator-hubot
 
 # デタッチ毎に実行するスクリプトを登録
 ADD ./scripts/startup.sh /usr/local/bin/startup.sh
