--- a/scripts/setup_cloudatcost/main.yml
+++ b/scripts/setup_cloudatcost/main.yml
@@ -1,14 +1,29 @@
 # coding:utf-8
 
 - hosts: all
+  sudo: yes
+
+  handlers:
+
+  - name: update tzdata
+    command: /usr/sbin/dpkg-reconfigure --frontend noninteractive tzdata
+
 
   tasks:
 
-    - name: upgrade all packages
-      apt: name={{item}} state=persent update_cache=yes
-      with_item:
+  - name: install and upgrade all packages
+    apt: name={{ item }} state=present update_cache=yes
+    with_items:
         - git
         - language-pack-ja
+        - byobu
 
-    - name: locale setting
-      shell: 'sudo update-locale LANG=ja_JP.UTF-8'
+  - name: locale setting
+    shell: 'update-locale LANG=ja_JP.UTF-8'
+
+  - name: Set timezone variables
+    copy: content='Asia/Tokyo\n' dest=/etc/timezone backup=yes
+    notify: update tzdata
+
+  - name: firewall(ufw) settings
+    include: tasks/firewall.yml
