Ansible定義変更。個別のパスワードなどがあるものは「テンプレート」として、最初にそれをコピーして動かすような前提に変更。

--- a/scripts/setup_cloudatcost/main.yml
+++ b/scripts/setup_cloudatcost/main.yml
@@ -30,6 +30,5 @@
   - name: firewall(ufw) settings
     include: tasks/firewall.yml
 
-  # DDNSのスクリプトは「ドメインとパスワードとか、色々仕込まなければならない」ので、基本はペンディングにしとく。
-#  - name: DDNS settings
-#    include: tasks/ddns.yml
+  - name: DDNS settings
+    include: tasks/ddns.yml
