--- a/scripts/setup_cloudatcost/tasks/firewall.yml
+++ b/scripts/setup_cloudatcost/tasks/firewall.yml
@@ -10,7 +10,16 @@
   ufw: rule=allow port=ssh
 
 - name: Allow Dotnet Core Application
-  ufw: rule=allow port=5000
+  ufw: 
+    rule: allow 
+    port: 5000
+    proto: tcp
+
+- name: Allow some Docker Application.
+  ufw: 
+    rule: allow
+    port: 8000:8999 
+    proto: tcp
 
 # TODO インストールされたら
 
