--- a/scripts/ansible-sample/develop-in-one/resources/pg_hba.conf
+++ b/scripts/ansible-sample/develop-in-one/resources/pg_hba.conf
@@ -1,5 +1,6 @@
 local   all         all                               ident
-host    all         all         127.0.0.1/32          ident
-host    all         all         ::1/128               ident
-host    all         all         172.17.0.0/24         password
-
+# host    all         all         127.0.0.1/32          ident
+# host    all         all         ::1/128               ident
+# host    all         all         172.17.0.0/16         password
+# ちょっとここのトラブルが続き過ぎなので…全開放(問題あらば再度細かく設定)
+host    all         all         0.0.0.0/0             password
